<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/fname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"

        app:layout_constraintStart_toEndOf="@+id/fname"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9C27B0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="CANCEL"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contin"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/lname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/lname"
        app:layout_constraintTop_toBottomOf="@+id/fname1"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="186dp"
        android:layout_height="103dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/vtype"
        app:layout_constraintTop_toBottomOf="@+id/lname1">

        <RadioButton
            android:id="@+id/b11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bussiness11"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#9C27B0" />

        <RadioButton
            android:id="@+id/s11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social11"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#9C27B0" />
    </RadioGroup>

    <TextView
        android:id="@+id/vtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/visit_type1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9C27B0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lname" />

    <Button
        android:id="@+id/contin"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="CONTINUE"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:rippleColor="@color/black" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="92dp"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9C27B0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="-32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:background="#7CC1CB"
        android:paddingTop="10sp"
        android:text="MATERIAL LIGHT"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>